Should now be an ingester that handles updates of objects